--- a/microservice/pom.xml
+++ b/microservice/pom.xml
@@ -172,6 +172,15 @@
             <version>1.2.73</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>dnsjava</groupId>
+            <artifactId>dnsjava</artifactId>
+            <version>2.0.6</version>
+<!--            <version>3.3.1</version>-->
+<!--            <type>bundle</type>-->
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
